--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corona virus cases confirmed in Europe (until 14.3.2020)</title>
+    <title>Corona virus cases confirmed in Europe (updated 14.3.2020)</title>
     <style> body {padding: 0; margin: 0;} </style>
 
 <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
