--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Corona virus cases confirmed in Europe (updated 14.3.2020)</title>
     <style> body {padding: 0; margin: 0;} </style>
 <a Based on WHO Coronavirus disease (COVID-2019) situation href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports">reports</a>
-<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-  </head>
+<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>  </head>
   <body>
   </body>
 </html>
