--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corona virus cases confirmed in Europe (updated 15.3.2020)</title>
+    <title>Corona virus cases confirmed in Europe</title>
     <style> body {padding: 0; margin: 0;} </style>
     <div>
       <h3>Coronavirus cases confirmed in Europe (updated 15.3.2020)</h3>
