--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Corona virus cases confirmed in Europe</title>
     <style> body {padding: 0; margin: 0;} </style>
     <div>
-      <h3>Coronavirus cases confirmed in Europe (updated 15.3.2020)</h3>
+      <h3>Coronavirus cases confirmed in Europe (updated with 16.3.2020 reports)</h3>
       Based on WHO Coronavirus disease (COVID-2019) situation <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports">reports</a>
     </div>
    
-<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>  </head>
-  <body>
+<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>  <body>
   </body>
 </html>
