--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Corona virus cases confirmed in Europe</title>
     <style> body {padding: 0; margin: 0;} </style>
     <div>
-      <h3>Coronavirus cases confirmed in Europe (updated with 16.3.2020 reports)</h3>
+      <h3>Coronavirus cases confirmed in Europe (updated 17.3.2020)</h3>
       Based on WHO Coronavirus disease (COVID-2019) situation <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports">reports</a>
     </div>
    
