--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
       Based on WHO Coronavirus disease (COVID-2019) situation <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports">reports</a>
     </div>
    
-<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>  <body>
-  </body>
+<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>  </body>
 </html>
