--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Corona virus cases confirmed in Europe</title>
     <style> body {padding: 0; margin: 0;} </style>
     <div>
-      <h3>Coronavirus cases confirmed in Europe (updated 30.3.2020)</h3>
+      <h3>Coronavirus cases confirmed in Europe (updated 31.3.2020)</h3>
       Based on WHO Coronavirus disease (COVID-2019) situation <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports">reports</a>
     </div>
    
-<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/1578109" data-url="https://public.flourish.studio/visualisation/1578109/embed"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
     </html>
